cilium-cli/connectivity/builder/manifests/template/testdata/ip_to_cidr/in.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-cidr-deny
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egressDeny:
  - toCIDRSet:
    - cidr: "{{.ExternalCIDR}}"
      except:
      - "{{.ExternalIP | ipToCIDR }}"
