cilium-cli/connectivity/builder/manifests/template/testdata/ip_to_cidr/out.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-cidr-deny
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egressDeny:
  - toCIDRSet:
    - cidr: 10.0.0.0/16
      except:
      - 10.0.0.2/32
